[gd_scene load_steps=84 format=2]

[ext_resource path="res://assets/entities/Monster_Creatures_Fantasy(Version 1.3)/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/entities/Monster_Creatures_Fantasy(Version 1.3)/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=2]
[ext_resource path="res://assets/entities/Monster_Creatures_Fantasy(Version 1.3)/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=3]
[ext_resource path="res://assets/entities/Monster_Creatures_Fantasy(Version 1.3)/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=4]
[ext_resource path="res://assets/entities/Monster_Creatures_Fantasy(Version 1.3)/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=5]
[ext_resource path="res://godot/src/mobs/Skeleton.gd" type="Script" id=6]
[ext_resource path="res://godot/src/zones/DetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://godot/src/zones/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://godot/src/zones/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://godot/src/zones/FloorDetection.tscn" type="PackedScene" id=10]
[ext_resource path="res://godot/src/zones/Hitbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://godot/src/ui/MobStats.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "move",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=67]
radius = 11.5101
height = 24.68

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 180.304, 78.6198 )

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 4, 28.2169 )

[sub_resource type="CapsuleShape2D" id=70]
radius = 9.79822
height = 23.3989

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 18.8222, 26.4107 )

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 519
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, -30 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 66 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 67 )

[node name="DetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
position = Vector2( 140.667, -31.3326 )
shape = SubResource( 68 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
wander_range = 128

[node name="FloorDetection" parent="." instance=ExtResource( 10 )]

[node name="CollisionShape2D" parent="FloorDetection" index="0"]
position = Vector2( 15, 10 )
shape = SubResource( 69 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 16
collision_mask = 1088

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.0763426, -20.4177 )
shape = SubResource( 70 )

[node name="Enemyhitbox" parent="." instance=ExtResource( 11 )]
collision_layer = 128
collision_mask = 8
damage = 15.0

[node name="CollisionShape2D" parent="Enemyhitbox" index="0"]
position = Vector2( 30, -25 )
shape = SubResource( 71 )

[node name="MobStats" parent="." instance=ExtResource( 12 )]
margin_left = -22.0
margin_top = -67.0
margin_right = 34.0
margin_bottom = -53.0
experience = 8.0
health = 10.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="DetectionZone"]
[editable path="FloorDetection"]
[editable path="Hurtbox"]
[editable path="Enemyhitbox"]
